--- a/CSS/style.css
+++ b/CSS/style.css
@@ -203,14 +203,19 @@ body{
     font-size: 24px;
 }
 
-.container,
-.gallery{
+.container{
     display: flex;
     margin:100px auto;
-    width: 85%;
+    width: 55%;
     justify-content: center;
 }
 
+.gallery{
+    display: flex;
+    margin:100px auto;
+    justify-content: center;
+    gap: 30px;
+}
 .main-card{
     width: 325px;
     margin: 10px;
@@ -282,7 +287,7 @@ body{
     height: 500px;
     border-radius: 10px;
     background-color: #eaeaea;
-    margin-bottom: 60px;
+    margin-bottom: 30px;
 }
 
 .card img{
